Soft delete, API for country code and country abbreviation.... MLAB connection

--- a/StudentSystem/Web.config
+++ b/StudentSystem/Web.config
@@ -10,7 +10,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="StudentSystem.Properties.Settings.connString" connectionString="mongodb://localhost" />
+    <add name="StudentSystem.Properties.Settings.connString" connectionString="mongodb://utkarsh:admin123123@ds331735.mlab.com:31735/productmanagementdb" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -73,7 +73,7 @@
   <applicationSettings>
     <StudentSystem.Properties.Settings>
       <setting name="dbName" serializeAs="String">
-        <value>UserDB</value>
+        <value>productmanagementdb</value>
       </setting>
     </StudentSystem.Properties.Settings>
   </applicationSettings>
