--- a/StudentSystem/StudentSystem.csproj
+++ b/StudentSystem/StudentSystem.csproj
@@ -167,6 +167,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Images\black-background.jpg" />
     <Content Include="Scripts\countryCode.js" />
     <Content Include="Scripts\Validation.js" />
     <Content Include="Content\Register.css" />
