--- a/StudentSystem/StudentSystem.csproj
+++ b/StudentSystem/StudentSystem.csproj
@@ -153,7 +153,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\Login\LoginController.cs" />
     <Compile Include="Models\Login.cs" />
     <Compile Include="TestingObjectTypeSerializer.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -226,7 +226,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\Login\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
