Slight Work for the day... Attendance, Login

--- a/StudentSystem/StudentSystem.csproj
+++ b/StudentSystem/StudentSystem.csproj
@@ -325,6 +325,7 @@
     <Content Include="Views\Manage\SetPassword.cshtml" />
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Attendance\Attendance.cshtml" />
+    <Content Include="Views\Shared\LoginPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
