--- a/StudentSystem.Tests/packages.config
+++ b/StudentSystem.Tests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Avo.AspNet.Identity.MongoDB" version="1.0.6" targetFramework="net461" />
+  <package id="DnsClient" version="1.0.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net461" />
   <package id="jQuery" version="1.12.4" targetFramework="net461" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
@@ -14,8 +16,13 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="MongoDB.Bson" version="2.7.0" targetFramework="net461" />
+  <package id="MongoDB.Driver" version="2.7.0" targetFramework="net461" />
+  <package id="MongoDB.Driver.Core" version="2.7.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
 </packages>
