--- a/StudentSystem/web.config
+++ b/StudentSystem/web.config
@@ -12,14 +12,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   
-   <!--<connectionStrings>
+   <connectionStrings>
     <add name="StudentSystem.Properties.Settings.connString" connectionString="mongodb://utkarsh:admin123123@ds331735.mlab.com:31735/productmanagementdb" />
   
   
-  </connectionStrings>-->
-   <connectionStrings>
-      <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication1-20190218112400.mdf;Initial Catalog=aspnet-WebApplication1-20190218112400;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+   <!--<connectionStrings>
+      <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication1-20190218112400.mdf;Initial Catalog=aspnet-WebApplication1-20190218112400;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -31,7 +31,7 @@
   </appSettings>
   <system.web>
     <authentication mode="Forms">
-            <forms loginUrl="/Login/Login"></forms>
+            <forms loginUrl="/Account/Login"></forms>
   </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
