--- a/StudentSystem/web.config
+++ b/StudentSystem/web.config
@@ -13,10 +13,8 @@
   </configSections>
   
    <connectionStrings>
-    <add name="StudentSystem.Properties.Settings.connString" connectionString="mongodb://utkarsh:admin123123@ds331735.mlab.com:31735/productmanagementdb" />
-  
-  
-  </connectionStrings>
+      <add name="StudentSystem.Properties.Settings.connString" connectionString="mongodb://utkarsh:admin123123@ds147125.mlab.com:47125/productmanagementdbbeta" />
+   </connectionStrings>
    <!--<connectionStrings>
       <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication1-20190218112400.mdf;Initial Catalog=aspnet-WebApplication1-20190218112400;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>-->
@@ -31,7 +29,7 @@
   </appSettings>
   <system.web>
     <authentication mode="Forms">
-            <forms loginUrl="/Account/Login"></forms>
+            <forms loginUrl="/Login/Login"></forms>
   </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
@@ -91,7 +89,7 @@
   <applicationSettings>
     <StudentSystem.Properties.Settings>
       <setting name="dbName" serializeAs="String">
-        <value>productmanagementdb</value>
+        <value>productmanagementdbbeta</value>
       </setting>
     </StudentSystem.Properties.Settings>
   </applicationSettings>
